# Rating_Systems

./: .gitignore  .pre-commit-config.yaml  README.md  docs.md  docs.py  gen_ref_pages.py  generate_docs.py  pydoc-markdown.yml  pyproject.toml
docs/: .generated-files.txt  mkdocs.yml
docs/content/: datasource.md  game.md  gamestats.md  prediction.md  predictor.md  rating.md  ratingsystem.md  stat.md  team_rating.md
src/ratingsystems/: __init__.py
src/ratingsystems.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ratingsystems/core/: __init__.py  data_source.py  predictor.py  rating_system.py
src/ratingsystems/core/cli/: __init__.py  __main__.py  cli.py  helpers.py
src/ratingsystems/core/model/: __init__.py  bracket.py  game.py  prediction.py  rating.py  stat.py  team_rating.py
src/ratingsystems/core/util/: __init__.py  file.py  math.py  text.py
